--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <title>Familia Joestar</title>
-        <script src="main.js"></script>
+       <script src="main.js"></script>
     </head>
     <body>
         <h1>OS JOESTARS</h1>
-        <img src="joestars.jpg" id="joestars">
+        <img src="a1.jpg" id="joestars">
         <h3 id="familia">família joestar</h3>
-        <button onclick="click()">trocar joestar</button>
+        <button onclick="update()">trocar joestar</button>
     </body>
+     
 </html>
